changed mappers implementation reading all created snapshots deleting board and chat